update to Java 17 + Spring 3.1.5 + MongoDB 7.0