@@ -2,8 +2,10 @@ package com.mongodb.starter;
 
 import com.mongodb.client.MongoClient;
 import com.mongodb.client.MongoDatabase;
-import com.mongodb.starter.models.Person;
+import com.mongodb.starter.dtos.PersonDTO;
+import com.mongodb.starter.models.PersonEntity;
 import com.mongodb.starter.repositories.PersonRepository;
+import jakarta.annotation.PostConstruct;
 import org.bson.types.ObjectId;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.DisplayName;
@@ -11,22 +13,20 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.web.client.TestRestTemplate;
-import org.springframework.boot.web.server.LocalServerPort;
+import org.springframework.boot.test.web.server.LocalServerPort;
 import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
-import javax.annotation.PostConstruct;
 import java.util.ArrayList;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
-class PersonControllerIT {
+public class PersonControllerIT {
 
     @LocalServerPort
     private int port;
@@ -58,12 +58,15 @@ class PersonControllerIT {
     void postPerson() {
         // GIVEN
         // WHEN
-        ResponseEntity<Person> result = rest.postForEntity(URL + "/person", testHelper.getMax(), Person.class);
+        ResponseEntity<PersonDTO> result = rest.postForEntity(URL + "/person", testHelper.getMaxDTO(), PersonDTO.class);
         // THEN
         assertThat(result.getStatusCode()).isEqualTo(HttpStatus.CREATED);
-        Person personResult = result.getBody();
-        assertThat(personResult.getId()).isNotNull();
-        assertThat(personResult).usingRecursiveComparison().ignoringFields("id", "createdAt").isEqualTo(testHelper.getMax());
+        PersonDTO personDTOResult = result.getBody();
+        assertThat(personDTOResult).isNotNull();
+        assertThat(personDTOResult.id()).isNotNull();
+        assertThat(personDTOResult).usingRecursiveComparison()
+                                   .ignoringFields("id", "createdAt")
+                                   .isEqualTo(testHelper.getMaxDTO());
     }
 
     @DisplayName("POST /persons with 2 person")
@@ -71,64 +74,70 @@ class PersonControllerIT {
     void postPersons() {
         // GIVEN
         // WHEN
-        HttpEntity<List<Person>> body = new HttpEntity<>(testHelper.getListMaxAlex());
-        ResponseEntity<List<Person>> response = rest.exchange(URL + "/persons", HttpMethod.
-                POST, body, new ParameterizedTypeReference<List<Person>>() {
-        });
+        HttpEntity<List<PersonDTO>> body = new HttpEntity<>(testHelper.getListMaxAlexDTO());
+        ResponseEntity<List<PersonDTO>> response = rest.exchange(URL + "/persons", HttpMethod.POST, body,
+                                                                 new ParameterizedTypeReference<>() {
+                                                                 });
         // THEN
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.CREATED);
         assertThat(response.getBody()).usingElementComparatorIgnoringFields("id", "createdAt")
-                                      .containsExactlyInAnyOrderElementsOf(testHelper.getListMaxAlex());
+                                      .containsExactlyInAnyOrderElementsOf(testHelper.getListMaxAlexDTO());
     }
 
     @DisplayName("GET /persons with 2 persons")
     @Test
     void getPersons() {
         // GIVEN
-        List<Person> personsInserted = personRepository.saveAll(testHelper.getListMaxAlex());
+        List<PersonEntity> personEntities = personRepository.saveAll(testHelper.getListMaxAlexEntity());
         // WHEN
-        ResponseEntity<List<Person>> result = rest.exchange(URL + "/persons", HttpMethod.GET, null,
-                                                            new ParameterizedTypeReference<List<Person>>() {
-                                                            });
+        ResponseEntity<List<PersonDTO>> result = rest.exchange(URL + "/persons", HttpMethod.GET, null,
+                                                               new ParameterizedTypeReference<>() {
+                                                               });
         // THEN
         assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(result.getBody()).containsExactlyInAnyOrderElementsOf(personsInserted);
+        List<PersonDTO> expected = List.of(testHelper.getMaxDTOWithId(personEntities.get(0).getId()),
+                                           testHelper.getAlexDTOWithId(personEntities.get(1).getId()));
+        assertThat(result.getBody()).usingRecursiveFieldByFieldElementComparatorIgnoringFields("id", "createdAt")
+                                    .containsExactlyInAnyOrderElementsOf(expected);
     }
 
     @DisplayName("GET /person/{id}")
     @Test
     void getPersonById() {
         // GIVEN
-        Person personInserted = personRepository.save(testHelper.getAlex());
+        PersonEntity personInserted = personRepository.save(testHelper.getAlexEntity());
         ObjectId idInserted = personInserted.getId();
         // WHEN
-        ResponseEntity<Person> result = rest.getForEntity(URL + "/person/" + idInserted, Person.class);
+        ResponseEntity<PersonDTO> result = rest.getForEntity(URL + "/person/" + idInserted, PersonDTO.class);
         // THEN
         assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(result.getBody()).isEqualTo(personInserted);
+        assertThat(result.getBody()).usingRecursiveComparison()
+                                    .ignoringFields("createdAt")
+                                    .isEqualTo(testHelper.getAlexDTOWithId(idInserted));
     }
 
     @DisplayName("GET /persons/{ids}")
     @Test
     void getPersonsByIds() {
         // GIVEN
-        List<Person> personsInserted = personRepository.saveAll(testHelper.getListMaxAlex());
-        List<String> idsInserted = personsInserted.stream().map(Person::getId).map(ObjectId::toString).collect(toList());
+        List<PersonEntity> personsInserted = personRepository.saveAll(testHelper.getListMaxAlexEntity());
+        List<String> idsInserted = personsInserted.stream().map(PersonEntity::getId).map(ObjectId::toString).toList();
         // WHEN
         String url = URL + "/persons/" + String.join(",", idsInserted);
-        ResponseEntity<List<Person>> result = rest.exchange(url, HttpMethod.GET, null,
-                                                            new ParameterizedTypeReference<List<Person>>() {
-                                                            });
+        ResponseEntity<List<PersonDTO>> result = rest.exchange(url, HttpMethod.GET, null,
+                                                               new ParameterizedTypeReference<>() {
+                                                               });
         // THEN
         assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(result.getBody()).containsExactlyInAnyOrderElementsOf(personsInserted);
+        assertThat(result.getBody()).usingRecursiveFieldByFieldElementComparatorIgnoringFields("id", "createdAt")
+                                    .containsExactlyInAnyOrderElementsOf(testHelper.getListMaxAlexDTO());
     }
 
     @DisplayName("GET /persons/count")
     @Test
     void getCount() {
         // GIVEN
-        personRepository.saveAll(testHelper.getListMaxAlex());
+        personRepository.saveAll(testHelper.getListMaxAlexEntity());
         // WHEN
         ResponseEntity<Long> result = rest.getForEntity(URL + "/persons/count", Long.class);
         // THEN
@@ -140,11 +149,11 @@ class PersonControllerIT {
     @Test
     void deletePersonById() {
         // GIVEN
-        Person personInserted = personRepository.save(testHelper.getMax());
-        ObjectId idInserted = personInserted.getId();
+        PersonEntity personInserted = personRepository.save(testHelper.getMaxEntity());
+        String idInserted = personInserted.getId().toHexString();
         // WHEN
-        ResponseEntity<Long> result = rest.exchange(URL + "/person/" + idInserted.toString(), HttpMethod.DELETE, null,
-                                                    new ParameterizedTypeReference<Long>() {
+        ResponseEntity<Long> result = rest.exchange(URL + "/person/" + idInserted, HttpMethod.DELETE, null,
+                                                    new ParameterizedTypeReference<>() {
                                                     });
         // THEN
         assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
@@ -156,12 +165,12 @@ class PersonControllerIT {
     @Test
     void deletePersonsByIds() {
         // GIVEN
-        List<Person> personsInserted = personRepository.saveAll(testHelper.getListMaxAlex());
-        List<String> idsInserted = personsInserted.stream().map(Person::getId).map(ObjectId::toString).collect(toList());
+        List<PersonEntity> personsInserted = personRepository.saveAll(testHelper.getListMaxAlexEntity());
+        List<String> idsInserted = personsInserted.stream().map(PersonEntity::getId).map(ObjectId::toString).toList();
         // WHEN
-        ResponseEntity<Long> result = rest.exchange(URL + "/persons/" + String.join(",", idsInserted), HttpMethod.DELETE, null,
-                                                    new ParameterizedTypeReference<Long>() {
-                                                    });
+        ResponseEntity<Long> result = rest.exchange(URL + "/persons/" + String.join(",", idsInserted),
+                                                    HttpMethod.DELETE, null, new ParameterizedTypeReference<>() {
+                });
         // THEN
         assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
         assertThat(result.getBody()).isEqualTo(2L);
@@ -172,10 +181,10 @@ class PersonControllerIT {
     @Test
     void deletePersons() {
         // GIVEN
-        personRepository.saveAll(testHelper.getListMaxAlex());
+        personRepository.saveAll(testHelper.getListMaxAlexEntity());
         // WHEN
         ResponseEntity<Long> result = rest.exchange(URL + "/persons", HttpMethod.DELETE, null,
-                                                    new ParameterizedTypeReference<Long>() {
+                                                    new ParameterizedTypeReference<>() {
                                                     });
         // THEN
         assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
@@ -187,19 +196,20 @@ class PersonControllerIT {
     @Test
     void putPerson() {
         // GIVEN
-        Person personInserted = personRepository.save(testHelper.getMax());
+        PersonEntity personInserted = personRepository.save(testHelper.getMaxEntity());
         // WHEN
         personInserted.setAge(32);
         personInserted.setInsurance(false);
-        HttpEntity<Person> body = new HttpEntity<>(personInserted);
-        ResponseEntity<Person> result = rest.exchange(URL + "/person", HttpMethod.PUT, body,
-                                                      new ParameterizedTypeReference<Person>() {
-                                                      });
+        HttpEntity<PersonDTO> body = new HttpEntity<>(new PersonDTO(personInserted));
+        ResponseEntity<PersonDTO> result = rest.exchange(URL + "/person", HttpMethod.PUT, body,
+                                                         new ParameterizedTypeReference<>() {
+                                                         });
         // THEN
         assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(result.getBody()).isEqualTo(personRepository.findOne(personInserted.getId().toString()));
-        assertThat(result.getBody().getAge()).isEqualTo(32);
-        assertThat(result.getBody().getInsurance()).isFalse();
+        assertThat(result.getBody()).isEqualTo(
+                new PersonDTO(personRepository.findOne(personInserted.getId().toString())));
+        assertThat(result.getBody().age()).isEqualTo(32);
+        assertThat(result.getBody().insurance()).isFalse();
         assertThat(personRepository.count()).isEqualTo(1L);
     }
 
@@ -207,21 +217,21 @@ class PersonControllerIT {
     @Test
     void putPersons() {
         // GIVEN
-        List<Person> personsInserted = personRepository.saveAll(testHelper.getListMaxAlex());
+        List<PersonEntity> personsInserted = personRepository.saveAll(testHelper.getListMaxAlexEntity());
         // WHEN
         personsInserted.get(0).setAge(32);
         personsInserted.get(0).setInsurance(false);
         personsInserted.get(1).setAge(28);
         personsInserted.get(1).setInsurance(true);
-        HttpEntity<List<Person>> body = new HttpEntity<>(personsInserted);
+        HttpEntity<List<PersonDTO>> body = new HttpEntity<>(personsInserted.stream().map(PersonDTO::new).toList());
         ResponseEntity<Long> result = rest.exchange(URL + "/persons", HttpMethod.PUT, body,
-                                                    new ParameterizedTypeReference<Long>() {
+                                                    new ParameterizedTypeReference<>() {
                                                     });
         // THEN
         assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
         assertThat(result.getBody()).isEqualTo(2L);
-        Person max = personRepository.findOne(personsInserted.get(0).getId().toString());
-        Person alex = personRepository.findOne(personsInserted.get(1).getId().toString());
+        PersonEntity max = personRepository.findOne(personsInserted.get(0).getId().toString());
+        PersonEntity alex = personRepository.findOne(personsInserted.get(1).getId().toString());
         assertThat(max.getAge()).isEqualTo(32);
         assertThat(max.getInsurance()).isFalse();
         assertThat(alex.getAge()).isEqualTo(28);
@@ -233,7 +243,7 @@ class PersonControllerIT {
     @Test
     void getAverageAge() {
         // GIVEN
-        personRepository.saveAll(testHelper.getListMaxAlex());
+        personRepository.saveAll(testHelper.getListMaxAlexEntity());
         // WHEN
         ResponseEntity<Long> result = rest.getForEntity(URL + "/persons/averageAge", Long.class);
         // THEN
@@ -245,7 +255,8 @@ class PersonControllerIT {
         // This is required because it is not possible to create a new collection within a multi-documents transaction.
         // Some tests start by inserting 2 documents with a transaction.
         MongoDatabase db = mongoClient.getDatabase("test");
-        if (!db.listCollectionNames().into(new ArrayList<>()).contains("persons"))
+        if (!db.listCollectionNames().into(new ArrayList<>()).contains("persons")) {
             db.createCollection("persons");
+        }
     }
 }
